--- a/2. HTML & CSS/activeCollab/style.css
+++ b/2. HTML & CSS/activeCollab/style.css
@@ -1,7 +1,8 @@
 :root {
 
     --clrDarkGrey: #3F4655;
-    --clrLightGrey: #E9EDF2;
+    --clrMidGrey: #7c8696;
+    --clrLightGrey: #e9edf2;
     --clrElectricBlue: #3F9BF8;
     --clrWhite: #FFFFFF;
     --clrBlack: #202528;
@@ -26,7 +27,7 @@
     /* h2 */
     --fs200: 2rem;
     /* h1 */
-    --ds250: 2.5rem;
+    --fs250: 2.5rem;
 
     /* peut être utile en cas de media query => changement plus rapides */
     --fsBody: var(--fs100);
@@ -98,6 +99,16 @@ svg {
     display: block;
 }
 
+a {
+    text-decoration: none;
+    color: var(--clrWhite)
+}
+
+li {
+    list-style: none;
+    padding: .3rem;
+}
+
 /* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
 @media (prefers-reduced-motion: reduce) {
     html:focus-within {
@@ -151,6 +162,14 @@ svg {
     color: var(--clrBlack);
 }
 
+.textMidGrey {
+    color: var(--clrMidGrey);
+}
+
+.textLightGrey {
+    color: var(--clrLightGrey);
+}
+
 /* Valeurs texte */
 .retourLigne {
     word-break: break-word;
@@ -164,22 +183,33 @@ svg {
     text-align: center;
 }
 
+.italicText {
+    font-style: italic;
+}
+
 .textDecoNone {
     text-decoration: none;
 }
 
-/* +background+ */
-
-.bgDGrey {
-    background-color: var(--clrDarkGrey);
+.textDecoUnder {
+    text-decoration: underline;
 }
 
-.bgLGrey {
-    background-color: var(--clrLightGrey);
+/* width */
+.width100 {
+    width: 100%;
 }
 
-bgBlue {
-    background-color: var(--clrElectricBlue);
+.width75 {
+    width: 75%;
+}
+
+.width50 {
+    width: 50%;
+}
+
+.width25 {
+    width: 25%;
 }
 
 /* +margin+ */
@@ -208,16 +238,103 @@ bgBlue {
     padding: 2rem;
 }
 
+/* +background+ */
+
+.bgDGrey {
+    background-color: var(--clrDarkGrey);
+}
+
+.bgLGrey {
+    background-color: var(--clrLightGrey);
+}
+
+.bgBlue {
+    background-color: var(--clrElectricBlue);
+}
+
+/* +borders+ */
+.borderLeft {
+    border-left: 1px var(--clrBlack) solid;
+}
+
 /* === BLOCS === */
+
+header a,
+header li {
+    color: var(--clrBlack);
+}
+
+footer a {
+    color: var(--clrLightGrey);
+}
+
+button {
+    border: 2px var(--clrBlack) solid;
+    border-radius: 5px 0 0 5px;
+    padding: .3rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+
+.tools img {
+    width: 190px;
+    aspect-ratio: 1;
+}
+
+.form {
+    display: block;
+    background-color: var(--clrLightGrey);
+    text-align: start;
+    border: 1px var(--clrBlack) solid;
+    width: 30%;
+}
+
+label {
+    display: block;
+    font-size: var(--fs130);
+}
+
+input {
+    width: 100%;
+    margin-bottom: 1rem;
+    padding: .5rem;
+}
+
+/* label {
+    display: block;
+} */
 
 /* === EXCEPTIONS === */
 
+header button:last-child {
+    border-left: none;
+    border-radius: 0 5px 5px 0;
+}
+
+.tryFree:last-child {
+    margin-bottom: 0;
+    margin-top: auto;
+}
+
+.btnStart:last-child {
+    align-self: center;
+    padding-top: 1.5rem;
+}
+
 /* === COMPOSITION === */
+
+.displayBlock {
+    display: block;
+}
 
 /* +Flexbox+ */
 .displayFlex {
     display: flex;
     gap: 1rem;
+}
+
+.gap0 {
+    gap: 0;
 }
 
 .flexGrow {
@@ -230,6 +347,10 @@ bgBlue {
 
 .flexColumn {
     flex-direction: column;
+}
+
+.justifyStart {
+    justify-content: startS;
 }
 
 .justifyCenter {
@@ -252,11 +373,15 @@ bgBlue {
     align-items: center;
 }
 
+.alignStart {
+    align-items: flex-start;
+}
+
 /* +Grid+ */
 .container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: .5fr 1fr 2fr 2fr 1.5fr 2fr;
+    grid-template-rows: .5fr 1fr 2fr 2fr 1fr 2fr;
     gap: 0px 0px;
     grid-auto-flow: row;
     grid-template-areas:
