--- a/The hill/1. Frontend-sprint/style.css
+++ b/The hill/1. Frontend-sprint/style.css
@@ -412,6 +412,14 @@ h2 {
     background-color: var(--clr-Secondary-300);
 }
 
+button {
+    width: 150px;
+    height: 50px;
+    border-radius: 50px;
+    margin-bottom: 2rem;
+    color: var(--clr-Primary-500);
+}
+
 /* 
 ============
 COMPOSITION 
